--- a/casino/Base.lproj/Main.storyboard
+++ b/casino/Base.lproj/Main.storyboard
@@ -16,18 +16,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="blackjack-strategy-card2.gif" translatesAutoresizingMaskIntoConstraints="NO" id="hPO-wL-QaW">
-                                <rect key="frame" x="-9" y="62" width="432" height="611"/>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eE9-EK-GuU">
                                 <rect key="frame" x="166" y="686" width="82" height="30"/>
                                 <state key="normal" title="Back to title">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="NBt-oT-haT" kind="show" id="LAY-7O-cpC"/>
+                                    <segue destination="zSz-vh-N15" kind="show" id="scQ-pX-5ga"/>
                                 </connections>
                             </button>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="blackjack-strategy-card2.gif" translatesAutoresizingMaskIntoConstraints="NO" id="hPO-wL-QaW">
+                                <rect key="frame" x="-9" y="20" width="432" height="611"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -35,7 +35,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RQH-28-udC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-272" y="307"/>
+            <point key="canvasLocation" x="-280" y="1108"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="DdR-X3-EjP">
@@ -78,17 +78,6 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sLN-n2-0Au">
-                                <rect key="frame" x="16" y="651" width="98" height="30"/>
-                                <color key="backgroundColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="Basic strategy">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="cyc-MA-DhJ" kind="show" id="shg-Ch-qyy"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -404,6 +393,16 @@
                                     <segue destination="NBt-oT-haT" kind="show" id="uRf-ME-Zf1"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zzl-wX-7Oo">
+                                <rect key="frame" x="22" y="686" width="97" height="30"/>
+                                <state key="normal" title="basic strategy">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="cyc-MA-DhJ" kind="show" id="sbG-2J-4dR"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0021802937840000002" green="0.50740733049999998" blue="0.01831625584" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
@@ -422,6 +421,7 @@
         <image name="z02.png" width="200" height="300"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="LAY-7O-cpC"/>
+        <segue reference="scQ-pX-5ga"/>
+        <segue reference="uRf-ME-Zf1"/>
     </inferredMetricsTieBreakers>
 </document>
