＊デバイスを傾けても何も起こらないようにしました。 ＊最初の画面をいろんな機種に対応させました。

--- a/casino/Base.lproj/LaunchScreen.xib
+++ b/casino/Base.lproj/LaunchScreen.xib
@@ -10,21 +10,28 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright (c) 2015年 Mikito Kanamori. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye">
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="  Copyright (c) 2015年 Mikito Kanamori. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye">
                     <rect key="frame" x="20" y="695" width="375" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Dealer.png" translatesAutoresizingMaskIntoConstraints="NO" id="7gE-MH-Bdl">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="Dealer.png" translatesAutoresizingMaskIntoConstraints="NO" id="7gE-MH-Bdl">
                     <rect key="frame" x="-1" y="41" width="415" height="640"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="7gE-MH-Bdl" firstAttribute="top" relation="lessThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="top" constant="41" id="9Wd-lw-xBd"/>
+                <constraint firstItem="7gE-MH-Bdl" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="41" id="BLc-jF-Lxm"/>
+                <constraint firstAttribute="trailing" secondItem="7gE-MH-Bdl" secondAttribute="trailing" id="Bjg-nV-338"/>
+                <constraint firstItem="8ie-xW-0ye" firstAttribute="top" secondItem="7gE-MH-Bdl" secondAttribute="bottom" constant="14" id="D8K-Gw-csT"/>
                 <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
+                <constraint firstItem="7gE-MH-Bdl" firstAttribute="top" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="top" constant="41" id="LdZ-gu-s09"/>
                 <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
+                <constraint firstItem="8ie-xW-0ye" firstAttribute="top" secondItem="7gE-MH-Bdl" secondAttribute="bottom" constant="14" id="PpQ-Zv-McK"/>
                 <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
+                <constraint firstItem="7gE-MH-Bdl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="-1" id="ziK-5A-wMF"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
